in-dev: added manual libraries (with a script to fetch them) so it can compile in JDK 21 due to shadow library working weird in newer versions and 1.21.5 being incompatible with JDK 17.

--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,6 @@ jar {
 shadowJar {
     archiveClassifier.set('')
     destinationDirectory.set(file("server/plugins"))
-    relocate 'co.aikar.commands', 'dev.ezpadaz.vanillaPlus.acf'
-    relocate 'co.aikar.locales', 'dev.ezpadaz.vanillaPlus.locales'
     dependencies {
         include(dependency('org.mongodb:mongodb-driver-sync:5.3.1'))
     }
@@ -50,7 +48,7 @@ dependencies {
     implementation 'org.mongodb:mongodb-driver-sync:5.3.1'
     implementation 'org.xerial:sqlite-jdbc:3.49.1.0'
     implementation 'org.slf4j:slf4j-api:1.7.36'
-    implementation "co.aikar:acf-paper:0.5.1-SNAPSHOT"
+    implementation fileTree(dir: 'libs', include: '*.jar')
 }
 
 tasks {
