--- a/Server/server.properties
+++ b/Server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Apr 12 18:46:37 CST 2025
+#Sun Apr 13 17:38:38 CST 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -33,9 +33,9 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=A Minecraft Server
+motd=Local Development Server
 network-compression-threshold=256
-online-mode=true
+online-mode=false
 op-permission-level=4
 pause-when-empty-seconds=-1
 player-idle-timeout=0
