in-dev: Graveyard feature.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,16 +1,6 @@
-database:
-  target: 'local-mongo'
-  local-backend:
-    uri: "http://localhost:1337/api"
-  local-mongo:
-    uri: 'mongodb://localhost:27017'
-    database: 'minecraft'
-  local:
-    fileName: 'data'
 features:
-  telemetry:
-    player-data: true # Player Login, Exit, Death data
-    player-messages: false # Messages.
+  death-chest:
+    enabled: true
   double-xp:
     multiplier: 2
     enabled: true
@@ -31,6 +21,6 @@ features:
     min-tps: 17.0
     warning-tps: 18.0
 integration:
-  aurellium-skills: true
+  aura-skills: true
 debugMode: false
 owner: "Molthor226" # Change this to your name.
