--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -1,15 +1,48 @@
+version: 1.0
 features:
+  teleport:
+    tp-self: "&cNo te puedes enviar solicitudes a ti mismo."
+    tp-unsafe-location: "&cTu ubicacion no es segura"
+    tp-target-action-bring-true: "%o quiere que vayas a su ubicación."
+    tp-target-action-bring-false: "%o quiere ir contigo."
+    tp-target-action-accept: "[Aceptar]"
+    tp-target-action-accept-description: "Aceptar solicitud"
+    tp-target-action-reject: "[Rechazar"
+    tp-target-action-reject-description: "Rechazar solicitud"
+    tp-origin-confirmation: "Se ha enviado la solicitud."
+    tp-origin-action-cancel: "[Cancelar]"
+    tp-origin-action-cancel-description: "Cancelar solicitud"
+    tp-target-expired: ""
+    tp-origin-expired: ""
+  homes:
+    save-success: "&6Datos de hogares: &a[GUARDADOS]"
+    load-empty: "&6Datos de hogares: &c[VACÍO]"
+    load-success: "&6Datos de hogares: &a[CARGADOS]"
+    load-error: "&6Datos de hogares: &c[ERROR]"
+    admin-teleport-format-error: "&cFormato incorrecto. Usa: hogar/nombreUsuario"
+    admin-teleport-success: "&aHas sido teletransportado al hogar '%h' de %p."
+    admin-teleport-not-found: "&cNo se encontró un hogar llamado '%h' para %p."
+    add-home-update-success: "&aLa ubicación de tu hogar '%h' ha sido actualizada."
+    add-home-limit-error: "&cYa has alcanzado el máximo de hogares permitidos (%l)."
+    add-home-success: "&aTu hogar '%h' ha sido guardado."
+    delete-home-error: "&cNo tienes hogares guardados."
+    delete-home-success: "&aTu hogar '%h' ha sido eliminado."
+    delete-home-not-found: "&cNo se encontró un hogar llamado '%h'."
   graveyard:
-    description: "Informacion sobre las tumbas"
-    console-save-success-message: "&6Graveyard Data: &a[SAVED]"
-    console-load-empty-message: "&6Graveyard Data: &c[EMPTY]"
-    console-load-success-message: "&6Graveyard Data: &a[OK]"
-    console-load-error-message: "&6Graveyard Data: &c[ERROR]"
+    description: "Información sobre las tumbas"
+    console-save-success-message: "&6Datos de tumbas: &a[GUARDADOS]"
+    console-load-empty-message: "&6Datos de tumbas: &c[VACÍO]"
+    console-load-success-message: "&6Datos de tumbas: &a[CARGADOS]"
+    console-load-error-message: "&6Datos de tumbas: &c[ERROR]"
     date-message-pattern: "dd 'de' MMMM 'a las' HH:mm z"
     grave-info-message: "&7Esta tumba le pertenece a &e%p&7, contiene &e%x XP&7, murió el &e%d"
     location-not-found: "&cNo se encontró una tumba en esta ubicación."
     location-wrong-owner-message: "&cNo puedes reclamar una tumba que no te pertenece."
-    claim-message: "&aTu &cinventario&a y tu &cexperiencia&a han sido restaurados de tu tumba."
+    claim-message: "&aTu &cinventario&a y tu &cexperiencia&a han sido restaurados desde tu tumba."
     claim-error-message: "&cError al restaurar la tumba."
-    no-suitable-grave-location-message: "&cNo se pudo encontrar un lugar adecuado para colocar la tumba, perdiste todo :("
+    no-suitable-grave-location-message: "&cNo se pudo encontrar un lugar adecuado para colocar la tumba. Perdiste todo :("
     placed-message: "&7Tu tumba ha sido colocada en &e%l &7en el mundo &e%w"
+  admin:
+    teleport-failure: "&cEl teletransporte ha fallado."
+    inventory-peek-player-offline: "&cEl jugador está inaccesible."
+    backpack-peek-player-offline: "&cEl jugador debe estar en línea."
