change: upgrade to 1.21.9 dependencies, removed sqlite and mongo as they are no longer planned to be used.
- Added missing strings to complete the lang.yml of the teleport tool.

--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -14,6 +14,24 @@ features:
     tp-origin-action-cancel-description: "Cancelar solicitud"
     tp-target-expired: "&cLa solicitud de &6%p&c ha caducado."
     tp-origin-expired: "&cLa solicitud hacia &6%p&c ha caducado."
+    tp-accept-no-request: "&cNo tienes ninguna solicitud."
+    tp-accept-origin-message: "&aAceptaron tu solicitud."
+    tp-accept-target-message: "&aAceptaste la solicitud."
+    tp-cancel-no-request: "&cNo tienes ninguna solicitud."
+    tp-cancel-origin-message: "&cCancelaste la solicitud que enviaste."
+    tp-cancel-origin-target-message: "&6%p&c canceló el viaje."
+    tp-cancel-target-message: "&cCancelaste la solicitud que enviaste."
+    tp-cancel-target-origin-message: "&6%p&c canceló el viaje."
+    tp-back-no-location: "&cNo tienes a donde volver."
+    tp-back-message: "&6Has vuelto a tu ubicacion anterior."
+    tp-request-target-offline: "&cEl jugador %p está offline."
+    tp-request-origin-offline: "&cEl jugador %p está offline."
+    tp-request-unsafe-location: "&aLa ubicacion de %p &cno es segura &aen este momento, se ha cancelado el tp."
+    tp-on-back-available-message: "Puedes regresar a tu ubicacion dando click "
+    tp-on-back-available-action: "[Aqui]"
+    tp-on-back-available-action-description: "Volver a la ubicación anterior"
+    tp-on-back-available-action-description-alt: " o escribiendo /tp back"
+    tp-back-expired: "&aTu ubicacion para regresar ha &ccaducado."
   homes:
     save-success: "&6Datos de hogares: &a[GUARDADOS]"
     load-empty: "&6Datos de hogares: &c[VACÍO]"
