--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,45 +1,97 @@
-name: Java CI with Gradle
+name: Java CI with Gradle & Releases
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: [ "dev", "main" ]        # build + release on pushes to dev/main
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" ]               # still build on PRs to main (no release)
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-
+      contents: write                  # needed for GitHub Releases
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
+      - uses: actions/checkout@v4
 
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
 
-    - name: Build with Gradle Wrapper
-      run: ./gradlew shadowJar
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+
+      - name: Build (shadowJar)
+        run: ./gradlew --no-daemon clean shadowJar
+
+      - name: Locate shaded JAR
+        id: jar
+        run: |
+          FILE=$(ls -1 build/libs/*-all.jar 2>/dev/null || ls -1 build/libs/*-shadow.jar)
+          if [ -z "$FILE" ]; then
+            echo "No shaded jar found in build/libs"; exit 1
+          fi
+          echo "file=$FILE" >> "$GITHUB_OUTPUT"
+          echo "Found: $FILE"
+
+      - name: Upload artifact (for logs/debug)
+        uses: actions/upload-artifact@v4
+        with:
+          name: plugin-jar
+          path: ${{ steps.jar.outputs.file }}
+
+      # --- Dev prerelease (on branch dev) ---
+      - name: Prepare dev-named copy
+        if: github.ref == 'refs/heads/dev'
+        run: |
+          mkdir -p dist
+          src="${{ steps.jar.outputs.file }}"
+          sha="${GITHUB_SHA::7}"
+          base="$(basename "$src" .jar)"
+          cp "$src" "dist/${base}-dev-${sha}.jar"
+          ls -l dist
+
+      - name: Create/Update DEV prerelease
+        if: github.ref == 'refs/heads/dev'
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: dev-${{ github.run_number }}
+          name: "Dev build #${{ github.run_number }}"
+          prerelease: true
+          generate_release_notes: true
+          files: dist/*.jar
+
+      # --- Main release (on branch main) ---
+      - name: Read version from gradle.properties
+        if: github.ref == 'refs/heads/main'
+        id: ver
+        run: |
+          ver=$(grep -E '^version\s*=' gradle.properties | head -n1 | cut -d= -f2 | tr -d '[:space:]')
+          if [ -z "$ver" ]; then echo "version not found in gradle.properties"; exit 1; fi
+          echo "version=$ver" >> "$GITHUB_OUTPUT"
+
+      - name: Create/Update Release
+        if: github.ref == 'refs/heads/main'
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ steps.ver.outputs.version }}
+          name: v${{ steps.ver.outputs.version }}
+          prerelease: false
+          generate_release_notes: true
+          files: ${{ steps.jar.outputs.file }}
 
   dependency-submission:
-
     runs-on: ubuntu-latest
     permissions:
       contents: write
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
