--- a/Server/server.properties
+++ b/Server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Tue Aug 05 18:03:33 CST 2025
+#Sat Jan 03 14:22:45 CST 2026
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -8,6 +8,7 @@ broadcast-rcon-to-ops=true
 bug-report-link=
 debug=false
 difficulty=easy
+enable-code-of-conduct=false
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -29,6 +30,14 @@ level-name=world
 level-seed=
 level-type=minecraft\:normal
 log-ips=true
+management-server-allowed-origins=
+management-server-enabled=false
+management-server-host=localhost
+management-server-port=0
+management-server-secret=KRgabOxTE4eYCx2sLI4KEzdnFYMJVPN95pFYWTGt
+management-server-tls-enabled=true
+management-server-tls-keystore=
+management-server-tls-keystore-password=
 max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
@@ -56,6 +65,7 @@ server-port=25565
 simulation-distance=10
 spawn-monsters=true
 spawn-protection=16
+status-heartbeat-interval=0
 sync-chunk-writes=true
 text-filtering-config=
 text-filtering-version=0
