--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,4 @@
-version: 1.2
+version: 1.3
 features:
   admin:
     enabled: true # enables some admin commands.
@@ -20,6 +20,9 @@ features:
     enabled: true
   enhancements:
     allow-any-books-in-bookshelf: true # to save any book in bookshelf (fixes bookshelfs in enchanted plugins)
+    xp-storage:
+      enabled: true # enables xp storage function
+      min-xp: 10 # min xp amount to be able to store.
   teleport:
     threshold: 60
     delay: 2
